fixed css issue with padding and center-alignment

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,12 +3,13 @@
 }
 
 .App-header {
+  padding: 25px;
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  align-items: right;
+  justify-content: flex-start;
   font-size: calc(10px + 2vmin);
   color: white;
 }
@@ -17,6 +18,7 @@
   color: #61dafb;
 }
 
-p {
+/*p {
   margin-right: 20px;
 }
+*/
